Changed the media query width for tablet

--- a/flask_app/static/style/style.css
+++ b/flask_app/static/style/style.css
@@ -293,7 +293,9 @@ a:active
     }
 }
 
-@media screen and (min-width: 720px) {
+
+/* Tablet Screen */
+@media screen and (min-width: 768px) {
     .l-screen 
     {
         width: 100%;
