--- a/flask_app/static/style/account.css
+++ b/flask_app/static/style/account.css
@@ -261,7 +261,7 @@ p {
   opacity: 0.8;
 }
 
-@media screen and (min-width: 768) {
+@media screen and (min-width: 768px) {
   .profileDetails {
     padding-inline: 95px;
   }
