--- a/flask_app/templates/signup.html
+++ b/flask_app/templates/signup.html
@@ -77,6 +77,7 @@
           </div>
 
           <div class="form-check">
+            <p>By checking this box, you agree to Lytrally's terms of use</p>
             {% if form.policy_agreement.errors %} {{
             form.policy_agreement(class="form-control form-control-lg
             is-invalid") }}
