--- a/flask_app/templates/account.html
+++ b/flask_app/templates/account.html
@@ -59,7 +59,7 @@
             <img
               class="rounded-circle profileImg"
               src="{{ image_file }}"
-              alt="your profile picture"
+              alt="user profile pic"
             />
             <div class="media-body">
               <h2>
