--- a/flask_app/templates/features.html
+++ b/flask_app/templates/features.html
@@ -6,7 +6,9 @@
     <div class="logoHeader">
       <img src="../static/images/icons/bell.svg" alt="" />
 
-      <div class="profilePic"></div>
+      <div class="profilePic">
+        <img src="{{ image_file }}" alt="user profile pic" />
+      </div>
     </div>
   </header>
   <section>
