--- a/flask_app/templates/signup.html
+++ b/flask_app/templates/signup.html
@@ -15,6 +15,30 @@
               Ready to unleash your creativity to the fullest? Sign up!
             </legend>
             <div class="form-group">
+              {{ form.first_name.label(class="form-control-label") }} {% if
+              form.first_name.errors %} {{ form.first_name(class="form-control
+              form-control-lg is-invalid") }}
+              <div class="invalid-feedback">
+                {% for error in form.first_name.errors %}
+                <span>{{ error }}</span>
+                {% endfor %}
+              </div>
+              {% else %} {{ form.first_name(class="form-control
+              form-control-lg") }} {% endif %}
+            </div>
+            <div class="form-group">
+              {{ form.last_name.label(class="form-control-label") }} {% if
+              form.last_name.errors %} {{ form.last_name(class="form-control
+              form-control-lg is-invalid") }}
+              <div class="invalid-feedback">
+                {% for error in form.last_name.errors %}
+                <span>{{ error }}</span>
+                {% endfor %}
+              </div>
+              {% else %} {{ form.last_name(class="form-control form-control-lg")
+              }} {% endif %}
+            </div>
+            <div class="form-group">
               {{ form.email.label(class="form-control-label") }} {% if
               form.email.errors %} {{ form.email(class="form-control
               form-control-lg is-invalid") }}
@@ -26,7 +50,6 @@
               {% else %} {{ form.email(class="form-control form-control-lg") }}
               {% endif %}
             </div>
-
             <div class="form-group">
               {{ form.password.label(class="form-control-label") }} {% if
               form.password.errors %} {{ form.password(class="form-control
