--- a/flask_app/templates/account.html
+++ b/flask_app/templates/account.html
@@ -56,13 +56,11 @@
       <form action="#">
         <div>
           <div class="media">
-            <label for="profileImg"><img
+            <img
               class="rounded-circle profileImg"
               src="{{ image_file }}"
               alt="user profile pic"
-            /></label>
-            <input type="file" name="profileImg" id="profileImg">
-            
+            />
             <div class="media-body">
               <h2>
                 Name: {{ current_user.first_name }} {{ current_user.last_name }}
